# bluenrg-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindBlueNRG.cmake  FindBlueNRGLP.cmake  bluenrg-gcc.cmake  bluenrglp-gcc.cmake
inc/: BlueNRG1_conf.h  BlueNRG1_it.h  main.h  rf_device_hal_conf.h  rf_device_it.h
src/: BlueNRG1_it.c  main.c  rf_device_hal_msp.c  rf_device_it.c  syscalls.c
svd/: BlueNRG1.svd  BlueNRG2.svd  BlueNRG_LP.svd  BlueNRG_LPS.svd  Spirit3.svd
